update comments for CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,21 +5,28 @@ set( CMAKE_BUILD_TYPE "Debug" )
 
 project(tomchain)
 
+## fetch dependencies with FetchContent
 include(FetchContent)
-set(ABSL_ENABLE_INSTALL ON)
 set(FETCHCONTENT_QUIET OFF)
+
+# gRPC and ProtoBuf
+set(ABSL_ENABLE_INSTALL ON)
 FetchContent_Declare(
   gRPC
   GIT_REPOSITORY https://github.com/grpc/grpc
   GIT_TAG        v1.55.0
 )
 FetchContent_MakeAvailable(gRPC)
+
+# spdlog 
 FetchContent_Declare(
   spdlog
   GIT_REPOSITORY https://github.com/gabime/spdlog.git
   GIT_TAG        v1.11.0
 )
 FetchContent_MakeAvailable(spdlog)
+
+# argparse
 FetchContent_Declare(
     argparse
     GIT_REPOSITORY https://github.com/p-ranav/argparse.git
