--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,66 @@ set(FETCHCONTENT_QUIET OFF)
 
 # gRPC and ProtoBuf
 set(ABSL_ENABLE_INSTALL ON)
+set(protobuf_MODULE_COMPATIBLE ON CACHE BOOL "")
 FetchContent_Declare(
   gRPC
   GIT_REPOSITORY https://github.com/grpc/grpc
   GIT_TAG        v1.55.0
 )
 FetchContent_MakeAvailable(gRPC)
+
+FetchContent_Declare(
+    Protobuf
+    GIT_REPOSITORY https://github.com/protocolbuffers/protobuf
+    GIT_TAG        v23.1 
+    SOURCE_SUBDIR  cmake
+)
+FetchContent_MakeAvailable(Protobuf)
+# Get source directory of the Protobuf
+FetchContent_GetProperties(Protobuf SOURCE_DIR Protobuf_SOURCE_DIR)
+# Include the script which defines 'protobuf_generate'
+include(${Protobuf_SOURCE_DIR}/cmake/protobuf-generate.cmake)
+
+set(PROTOS
+    ${CMAKE_CURRENT_SOURCE_DIR}/grpc_proto/tc-server.proto
+    ${CMAKE_CURRENT_SOURCE_DIR}/grpc_proto/tc-server-peer.proto
+)
+
+add_library(grpc-proto-obj OBJECT "${CMAKE_CURRENT_SOURCE_DIR}/grpc_proto/tc-server.proto" "${CMAKE_CURRENT_SOURCE_DIR}/grpc_proto/tc-server-peer.proto")
+target_link_libraries(grpc-proto-obj 
+    PUBLIC 
+    protobuf::libprotobuf 
+    grpc++
+    )
+set(PROTO_BINARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/grpc_proto")
+set(PROTO_IMPORT_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/grpc_proto")
+
+protobuf_generate(
+    TARGET grpc-proto-obj
+    OUT_VAR PROTO_GENERATED_FILES
+    IMPORT_DIRS ${PROTO_IMPORT_DIRS}
+    PROTOC_OUT_DIR "${PROTO_BINARY_DIR}")
+set_source_files_properties(${PROTO_GENERATED_FILES} PROPERTIES SKIP_UNITY_BUILD_INCLUSION on)
+
+protobuf_generate(
+    TARGET grpc-proto-obj
+    OUT_VAR PROTO_GENERATED_FILES
+    LANGUAGE grpc
+    GENERATE_EXTENSIONS .grpc.pb.h .grpc.pb.cc
+    PLUGIN "protoc-gen-grpc=${CMAKE_CURRENT_BINARY_DIR}/_deps/grpc-build/grpc_cpp_plugin"
+    # PLUGIN_OPTIONS "generate_mock_code=true"
+    IMPORT_DIRS ${PROTO_IMPORT_DIRS}
+    PROTOC_OUT_DIR "${PROTO_BINARY_DIR}")
+set_source_files_properties(${PROTO_GENERATED_FILES} PROPERTIES SKIP_UNITY_BUILD_INCLUSION on)
+
+target_include_directories(grpc-proto-obj PUBLIC "$<BUILD_INTERFACE:${PROTO_BINARY_DIR}>")
+
+# set(PROTO_SRC_DIR ${CMAKE_CURRENT_BINARY_DIR}/grpc-proto-src)
+# file(MAKE_DIRECTORY ${PROTO_SRC_DIR})
+# include_directories(${PROTO_SRC_DIR})
+
+# protobuf_generate(PROTO_SRCS PROTO_HDRS ${PROTO_SRC_DIR} ${PROTOS})
+# grpc_generate_cpp(GRPC_SRCS GRPC_HDRS ${PROTO_SRC_DIR} ${PROTOS})
 
 # spdlog 
 FetchContent_Declare(
@@ -48,24 +102,24 @@ include_directories(src/client)
 include_directories(src/server)
 include_directories(grpc_proto)
 
-add_library(tc-grpc-server
-    grpc_proto/tc-server.grpc.pb.h
-    grpc_proto/tc-server.grpc.pb.cc
-    grpc_proto/tc-server.pb.h
-    grpc_proto/tc-server.pb.cc
-    )
-target_link_libraries(tc-grpc-server
-    grpc++
-    )
-add_library(tc-grpc-server-peer 
-    grpc_proto/tc-server-peer.grpc.pb.h
-    grpc_proto/tc-server-peer.grpc.pb.cc
-    grpc_proto/tc-server-peer.pb.h
-    grpc_proto/tc-server-peer.pb.cc
-    )
-target_link_libraries(tc-grpc-server-peer 
-    grpc++
-    )
+# add_library(tc-grpc-server
+#     ${PROTO_SRC_DIR}/tc-server.grpc.pb.h
+#     ${PROTO_SRC_DIR}/tc-server.grpc.pb.cc
+#     ${PROTO_SRC_DIR}/tc-server.pb.h
+#     ${PROTO_SRC_DIR}/tc-server.pb.cc
+#     )
+# target_link_libraries(tc-grpc-server
+#     grpc++
+#     )
+# add_library(tc-grpc-server-peer 
+#     ${PROTO_SRC_DIR}/tc-server-peer.grpc.pb.h
+#     ${PROTO_SRC_DIR}/tc-server-peer.grpc.pb.cc
+#     ${PROTO_SRC_DIR}/tc-server-peer.pb.h
+#     ${PROTO_SRC_DIR}/tc-server-peer.pb.cc
+#     )
+# target_link_libraries(tc-grpc-server-peer 
+#     grpc++
+#     )
 
 include_directories(third_party/evmc/include)
 
@@ -79,7 +133,7 @@ add_executable(tc-client
     )
 target_link_libraries(tc-client 
     tc-entity
-    tc-grpc-server
+    grpc-proto-obj
     argparse
     spdlog::spdlog_header_only
     nlohmann_json::nlohmann_json
@@ -90,8 +144,7 @@ add_executable(tc-server
     )
 target_link_libraries(tc-server 
     tc-entity
-    tc-grpc-server
-    tc-grpc-server-peer 
+    grpc-proto-obj
     argparse
     spdlog::spdlog_header_only
     nlohmann_json::nlohmann_json
