--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,5 +79,6 @@
         "variant": "cpp",
         "*.ipp": "cpp",
         "csetjmp": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
