FIX (2-x): concurrent hash map copy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -225,3 +225,10 @@ target_link_libraries(test_msgpack
     tc-entity
     ${BLS_LOC} ${FF_LIB} ${GMPXX_LIBRARY} ${GMP_LIBRARY} ${BOOST_LIBS_4_BLS} ${CRYPTO_LIB} ${SSL_LIB}
     )
+
+add_executable(test_chm
+    test/test_chm.cpp
+    )
+target_link_libraries(test_chm
+    tc-entity   
+    )
